--- a/Udemy_HTML+CSS/Lessons_2/index.html
+++ b/Udemy_HTML+CSS/Lessons_2/index.html
@@ -6,22 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/Style.CSS">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
+    <div class="block">
+        <h1>HOME</h1>
+    </div>
     <h1>social media</h1>
-    <section class="links">   </section>
+    <section class="links"> </section>
     <div class="links_item">
-        <a href="instagram">instagram</a>
+        <a href="#">instagram</a>
     </div>
     <div class="links_item">
-        <a href="vk">vk</a>
+        <a href="#">vk</a>
     </div>
     <div class="links_item">
-        <a href="twitter">twitter</a>
+        <a href=#>twitter</a>
     </div>
-    
+
 </body>
 
 </html>
